Wrote my own version of the aux functions, including the function listschedulers, also had to add a new ListmySchedules function so that schedulers can also look at their own schedules and list schedules so that users can click on a schedulername and get a list of the schedules of that scheduler. Probably could have been a better way to do it.
